traillink.com (archived on 2017-08-21)
{
  "alexa_rank": 60291,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 6181,
  "classifier_probability": 1.0,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.71,
  "homepage_snapshot_redirected_domain": "traillink.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20171006163830id_/https://www.traillink.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20171006163830id_/http%3A//traillink.com",
  "interval": "2017_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "railstotrails.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170821194237id_/http%3A//www.railstotrails.org/whoweare/privacy.html",
  "policy_title": "Privacy Policy | Rails-to-Trails Conservancy",
  "policy_url": "railstotrails.org/whoweare/privacy.html",
  "sha1": "1a5db8c39298ad4d53278f87e5d4bfb43c9b709f",
  "simhash": 2529572675237126043,
  "simhash_updated": true,
  "site_hostname": "traillink.com",
  "site_url": "http://traillink.com",
  "smog": 14.41,
  "strict_updated": true,
  "timestamp": "20170821194237",
  "word_count": 985,
  "year": 2017
}

--- a/t/tr/tra/traillink.com.html
+++ b/t/tr/tra/traillink.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the traillink.com privacy policy that was archived on 2017-06-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170608201552id_/http%3A//www.railstotrails.org/whoweare/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the traillink.com privacy policy that was archived on 2017-08-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170821194237id_/http%3A//www.railstotrails.org/whoweare/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html xmlns:umbraco="http://umbraco.org" class="no-js js"><!--<![endif]--><head id="ContentPlaceHolderDefault_pageHead">
             <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -20,13 +20,12 @@
             <link rel="icon" type="image/png" href="/images/rtc/fav/favicon-32x32.png" sizes="32x32">
             <link rel="icon" type="image/png" href="/images/rtc/fav/favicon-96x96.png" sizes="96x96">
             <link rel="icon" type="image/png" href="/images/rtc/fav/favicon-16x16.png" sizes="16x16">
-            <link rel="manifest" href="/images/rtc/fav/manifest.json">
             <link rel="shortcut icon" href="/images/rtc/fav/favicon.ico">
             <meta name="msapplication-TileColor" content="#da532c">
             <meta name="msapplication-TileImage" content="/images/rtc/fav/mstile-144x144.png">
             <meta name="msapplication-config" content="/images/rtc/fav/browserconfig.xml">
             <meta name="theme-color" content="#ffffff">
-            <link rel="stylesheet" href="/css/rtc_main.css?v=131419179350992000">
+            <link rel="stylesheet" href="/css/rtc_main.css?v=131468421689264000">
             <link rel="stylesheet" href="/css/rtc_additional.css?v=131300228058410000">
             <link rel="stylesheet" type="text/css" href="/css/lightview/lightview.css">
             <script async="" src="//www.google-analytics.com/analytics.js"></script><script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-WW72GP4"></script><script src="/scripts/rtc_responsive_nav.min.js"></script>
@@ -53,6 +52,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	Privacy Policy | Rails-to-Trails Conservancy
 </title><meta name="description" content="Read about Rails-to-Trails Conservancy's privacy policy."><script async="" src="//static.hotjar.com/c/hotjar-127751.js?sv=5"></script></head>
     <body>
+        <input type="hidden" id="hidwid" value="-1"><img src="https://ct.winfunds.com/prod/pv?wid=-1&amp;sid=w35khcisgac3vr2pxk023ouy&amp;p=http%3a%2f%2fwww.railstotrails.org%2fprivacy%2f&amp;r=http%3a%2f%2fwww.railstotrails.org%2fprivacy%2f&amp;dc=A">
         <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WW72GP4"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
@@ -301,15 +301,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" type="text/javascript"></script>
-        <script src="/scripts/rtc_main.js?v=131419179392732000"></script>
-        <script src="/scripts/lib/jquery.query-object.js?v=131419179393732000" type="text/javascript"></script>
-        <script src="/scripts/linkclickuaga.js?v=131419179392662000" type="text/javascript"></script>
+        <script src="/scripts/rtc_main.js?v=131468421743964000"></script>
+        <script src="/scripts/lib/jquery.query-object.js?v=131468421746174000" type="text/javascript"></script>
+        <script src="/scripts/linkclickuaga.js?v=131468421743864000" type="text/javascript"></script>
         
     <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.5.1/moment.min.js"></script>
     <script src="/scripts/pikaday.js"></script>
 
-        <script type="text/javascript" src="/scripts/luminateExtend.js?v=131419179392692000"></script>
-        <script src="/scripts/rtc_convio.js?v=131419179392712000"></script>
+        <script type="text/javascript" src="/scripts/luminateExtend.js?v=131468421743894000"></script>
+        <script src="/scripts/rtc_convio.js?v=131468421743924000"></script>
         <!-- Go to www.addthis.com/dashboard to customize your tools -->
         <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-542192140154e2de" async=""></script>
         <script type="text/javascript" src="/scripts/lightview.js?v=131302613231824000"></script>
