--- a/l/lt/ltw/ltwinks.com.html
+++ b/l/lt/ltw/ltwinks.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ltwinks.com privacy policy that was archived on 2017-06-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170622062235id_/http%3A//www.ltwinks.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ltwinks.com privacy policy that was archived on 2017-08-21.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170821233525id_/http%3A//ltwinks.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>Latino Twinks</title>
