--- a/f/fr/fre/freshstorebuilder.com.html
+++ b/f/fr/fre/freshstorebuilder.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the freshstorebuilder.com privacy policy that was archived on 2016-10-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161018101622id_/https%3A//www.freshstorebuilder.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the freshstorebuilder.com privacy policy that was archived on 2017-08-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170822123845id_/https%3A//www.freshstorebuilder.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html class=" js flexbox flexboxlegacy canvas canvastext webgl no-touch geolocation postmessage websqldatabase indexeddb hashchange history draganddrop websockets rgba hsla multiplebgs backgroundsize borderimage borderradius boxshadow textshadow opacity cssanimations csscolumns cssgradients cssreflections csstransforms csstransforms3d csstransitions fontface generatedcontent video audio localstorage sessionstorage webworkers applicationcache svg inlinesvg smil svgclippaths" lang="en" style=""><!--<![endif]--><head>
  <meta charset="utf-8">
@@ -53,7 +53,7 @@
 
 
     <!--jquery libraries / others are at the bottom-->
-    <script type="text/javascript" async="" src="https://widget.intercom.io/widget/aszvr3rs"></script><script type="text/javascript" defer="" async="" src="https://serpd.org/analytics/piwik.js"></script><script type="text/javascript" async="" src="https://tag.perfectaudience.com/serve/536baf58b124c4a4180001db.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/platform.js"></script><script type="text/javascript" src="/js/jquery-1.7.1.min.js"></script>
+    <div class="fit-vids-style">­<style>               .fluid-width-video-wrapper {                 width: 100%;                              position: relative;                       padding: 0;                            }                                                                                   .fluid-width-video-wrapper iframe,        .fluid-width-video-wrapper object,        .fluid-width-video-wrapper embed {           position: absolute;                       top: 0;                                   left: 0;                                  width: 100%;                              height: 100%;                          }                                       </style></div><div class="fit-vids-style">­<style>               .fluid-width-video-wrapper {                 width: 100%;                              position: relative;                       padding: 0;                            }                                                                                   .fluid-width-video-wrapper iframe,        .fluid-width-video-wrapper object,        .fluid-width-video-wrapper embed {           position: absolute;                       top: 0;                                   left: 0;                                  width: 100%;                              height: 100%;                          }                                       </style></div><script type="text/javascript" async="" src="https://widget.intercom.io/widget/aszvr3rs"></script><script type="text/javascript" defer="" async="" src="https://serpd.org/analytics/piwik.js"></script><script type="text/javascript" async="" src="https://tag.perfectaudience.com/serve/536baf58b124c4a4180001db.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" src="https://apis.google.com/js/platform.js"></script><script async="" src="https://connect.facebook.net/en_US/fbevents.js"></script><script type="text/javascript" src="/js/jquery-1.7.1.min.js"></script>
     <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>-->
     <script type="text/javascript" src="/js/modernizr.js"></script>
 
@@ -158,11 +158,31 @@
 <!-- Intercom Live Chat -->
 <script>
 	window.intercomSettings = {
-		app_id: "aszvr3rs"
+		app_id: "aszvr3rs",
+        custom_launcher_selector: '.open-intercom'
+
 	};
 </script>
 <script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/aszvr3rs';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
 <!-- End Intercom Live Chat -->
+
+
+
+<!-- Facebook Pixel Code -->
+<script>
+    !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+        n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
+        n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
+        t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,
+        document,'script','https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '198464340581302'); // Insert your pixel ID here.
+    fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+               src="https://www.facebook.com/tr?id=198464340581302&ev=PageView&noscript=1"
+    /></noscript>
+<!-- DO NOT MODIFY -->
+<!-- End Facebook Pixel Code -->
 
 <!-- header starts-->
 <section id="header" class="clearfix">
@@ -186,17 +206,16 @@
                         <!--<li><a href="/testimonials"><span>Testimonials</span></a></li>-->
                         <li><a href="/showcase"><span>Showcase</span></a></li>
                         <li style="z-index: 3000;"><a href="/contact-us" style="padding-right: 10px;"><span>Contact Us</span><img src="" class="downarrowclass" style="border:0;"></a>
-                            <ul style="display: none; top: 108px; visibility: visible;">
-                                <li><a href="/contact-us"><span>Contact Us</span></a></li>
-                                <li><a href="https://freshhelpdesk.com/FSB"><span>Helpdesk</span></a></li>
+                            <ul style="display: none; top: 32px; visibility: visible;">
+                                <li><a class="open-intercom" href="mailto:aszvr3rs@incoming.intercom.io"><span>Send a Message</span></a></li>
+                                <li><a href="/contact-us"><span>Contact Page</span></a></li>
+                                <li><a href="https://guides.freshstoreinstant.com/"><span>Guides and Videos</span></a></li>
                                 <li><a href="/faqs"><span>FAQs</span></a></li>
-                                <li><a href="https://guides.freshdevelopment.org/"><span>Knowledgebase</span></a></li>
-                                <li><a href="http://www.freshmarketingforum.com"><span>Forum</span></a></li>
                             </ul>
                         </li>
                         <!--<li><a href="https://account.freshstorebuilder.com"><span>My Account</span></a></li>-->
                     </ul>
-                </div>
+                <select><option selected="selected" value="">Menu</option><option value="/">Home</option><option value="/how-it-works">How it Works</option><option value="/features">Features</option><option value="http://freedemo.freshstorebuilder.com/">Free Demo</option><option value="/order">Order</option><option value="/showcase">Showcase</option><option value="/contact-us">Contact Us</option><option value="mailto:aszvr3rs@incoming.intercom.io">Send a Message</option><option value="/contact-us">Contact Page</option><option value="https://guides.freshstoreinstant.com/">Guides and Videos</option><option value="/faqs">FAQs</option></select></div>
                 <!--menu ends-->
 
             </div>
@@ -259,7 +278,7 @@
             <!--column one starts-->
             <div class="span3">
             	<img src="/img/footer/robot-footer.png" width="200" data-2x="/img/footer/robot-footer@2x.png" alt="Who are We">
-                <p>We are a small team of dedicated and passionate people who love creating the software that has helped people like you create beautiful and profitable Amazon stores for over 6 years.</p>
+                <p>We are a small team of dedicated and passionate people who love creating the software that has helped people like you create beautiful and profitable Amazon stores for over 7 years.</p>
             </div>
             <!--column one ends-->
 
@@ -322,11 +341,11 @@
                 <h5>Your Account</h5>
                 <ul class="list-footerlinks">
                 					
-							<li><a href="https://account.freshstorebuilder.com/account/login/">Login</a></li>
+							<li><a href="https://myaccount.freshstorebuilder.com/account/login/">Login</a></li>
 					                    <li><a href="http://guides.freshdevelopment.org/">Guides</a></li>
                     <li><a href="http://youtube.com/freshstorebuilder">Video Training</a></li>
                     <li><a href="http://www.freshmarketingforum.com">Private Forum</a></li>
-                    <li><a rel="nofollow" href="https://account.freshstorebuilder.com/download">Downloads</a></li>
+                    <li><a rel="nofollow" href="https://myaccount.freshstorebuilder.com/download">Downloads</a></li>
                     <li><a href="http://www.freshwebmarket.com">Templates</a></li>
                     <li><a href="https://myaccount.freshstorebuilder.com/account/premium">Premium Area</a></li>
                     <li><a rel="nofollow" href="https://myaccount.freshstorebuilder.com/developer">Reseller Area</a></li>
@@ -340,7 +359,7 @@
                 <ul class="list-footerlinks">
                     <li><a rel="nofollow" href="/affiliateprogram">Affiliates</a></li>
                     <li><a href="/contact-us">Contact Us</a></li>
-                    <li><a href="https://freshhelpdesk.com/FSB">Help Desk</a></li>
+                    <li><a href="https://www.freshstoreinstant.com">Fresh Store Instant</a></li>
                     <li><a href="http://blog.freshstorebuilder.com">Blog</a></li>
                     <li><a href="http://facebook.com/freshstorebuilder/">FSB on Facebook</a></li>
                     <li><a href="http://twitter.com/freshstoretalk">FSB on Twitter</a></li>
@@ -387,7 +406,7 @@
         <div class="row">
             <div class="span12">
                 <p>
-                    Fresh Store Builder © Copyright 2010 - 2016<br>
+                    Fresh Store Builder © Copyright 2010 - 2017<br>
                     <a href="https://www.facebook.com/freshstorebuilder"><span class="footer-social-facebook"></span></a>
                     <a href="https://twitter.com/freshstoretalk"><span class="footer-social-twitter"></span></a>
                     <a href="http://www.youtube.com/user/freshstorebuilder"><span class="footer-social-youtube"></span></a>
@@ -468,8 +487,6 @@
 </script>
 
 
-<!-- Status Cake RUM - Real User Monitor -->
-<script type="text/javascript">var SC_RumID = 511;</script><script type="text/javascript" async="" src="https://www.statuscake.com/App/RUM/embed.js"></script>
 
 <script type="text/javascript">
     var _paq = _paq || [];
