ntorrents.net (archived on 2017-08-22)
{
  "alexa_rank": 70324,
  "analysis_subcorpus": true,
  "categories": "illegalcontent",
  "char_count": 3503,
  "classifier_probability": 0.98,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.41,
  "homepage_snapshot_redirected_domain": "ntorrents.net",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20171008112602id_/https://ntorrents.net/",
  "homepage_snapshot_url": "https://web.archive.org/web/20171008112602id_/http%3A//ntorrents.net",
  "interval": "2017_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "ntorrents.net",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170822134001id_/https%3A//ntorrents.net/priv.html",
  "policy_title": "Privacy Policy",
  "policy_url": "ntorrents.net/priv.html",
  "sha1": "da5583404c3f9cd4d74ba74568c3d39e0f93b290",
  "simhash": 10482986157600781209,
  "simhash_updated": false,
  "site_hostname": "ntorrents.net",
  "site_url": "http://ntorrents.net",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20170822134001",
  "word_count": 575,
  "year": 2017
}

--- a/n/nt/nto/ntorrents.net.html
+++ b/n/nt/nto/ntorrents.net.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the ntorrents.net privacy policy that was archived on 2017-06-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170622095923id_/http%3A//www.ntorrents.net/priv.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the ntorrents.net privacy policy that was archived on 2017-08-22.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170822134001id_/https%3A//ntorrents.net/priv.html) for the most accurate reproduction.-->
 
 <html lang="en"><head>
 <meta charset="utf-8">
