--- a/y/yo/you/youtubebyclick.com.html
+++ b/y/yo/you/youtubebyclick.com.html
@@ -1,12 +1,14 @@
-<!--The following is the downloaded HTML source of the youtubebyclick.com privacy policy that was archived on 2016-11-19.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161119005539id_/http%3A//www.youtubebyclick.com/PrivacyPolicy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the youtubebyclick.com privacy policy that was archived on 2017-08-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170824225224id_/https%3A//www.youtubebyclick.com/PrivacyPolicy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html class="www" xmlns="http://www.w3.org/1999/xhtml" lang="en"><head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-		<link rel="stylesheet" type="text/css" href="GenricPage.css">
-		<link rel="stylesheet" type="text/css" href="FreeDescription.css">
-		<link rel="stylesheet" type="text/css" href="PrivacyPolicy.css">
-		<link rel="stylesheet" type="text/css" href="HeaderMenuAndFotter.css"><link rel="alternate" hreflang="x-default" href="http://www.youtubebyclick.com/PrivacyPolicy.php"><link rel="alternate" href="http://www.youtubebyclick.com/PrivacyPolicy.php" hreflang="en"><link rel="alternate" href="http://www.youtubebyclick.com/es/PrivacyPolicy.php" hreflang="es"><link rel="alternate" href="http://www.youtubebyclick.com/fr/PrivacyPolicy.php" hreflang="fr"><link rel="alternate" href="http://www.youtubebyclick.com/pt/PrivacyPolicy.php" hreflang="pt"><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript">resha = "";</script><script type="text/javascript">  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');  ga('create', 'UA-25248011-1', 'auto');  ga('send', 'pageview');</script><script type="text/javascript" src="js/DownloadButton.js?version=20151102"></script><script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script><script type="text/javascript" src="js/jquery.lazyload.min.js"></script><meta property="og:locale" content="en">		<meta name="robots" content="noindex">
+		<link rel="stylesheet" type="text/css" href="https://youtubebyclick-xvbumqfixmhzxo.stackpathdns.com/GenricPage.css">
+		<link rel="stylesheet" type="text/css" href="https://youtubebyclick-xvbumqfixmhzxo.stackpathdns.com/FreeDescription.css">
+		<link rel="stylesheet" type="text/css" href="https://youtubebyclick-xvbumqfixmhzxo.stackpathdns.com/PrivacyPolicy.css">
+		<link rel="stylesheet" type="text/css" href="https://youtubebyclick-xvbumqfixmhzxo.stackpathdns.com/HeaderMenuAndFotter.css?version=20170813"><link rel="alternate" hreflang="x-default" href="https://www.youtubebyclick.com/PrivacyPolicy.php"><link rel="alternate" href="https://www.youtubebyclick.com/PrivacyPolicy.php" hreflang="en"><link rel="alternate" href="https://www.youtubebyclick.com/es/PrivacyPolicy.php" hreflang="es"><link rel="alternate" href="https://www.youtubebyclick.com/fr/PrivacyPolicy.php" hreflang="fr"><link rel="alternate" href="https://www.youtubebyclick.com/pt/PrivacyPolicy.php" hreflang="pt"><script async="" src="//cdn.oribi.io/XzE4NTIyMzEzOTU/oribi.js" id="ORIBIscript"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script type="text/javascript">resha = "https://youtubebyclick-xvbumqfixmhzxo.stackpathdns.com/";</script><script type="text/javascript">  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');  ga('create', 'UA-25248011-1', 'auto');  ga('send', 'pageview');</script><script type="text/javascript" src="https://youtubebyclick-xvbumqfixmhzxo.stackpathdns.com/js/DownloadButton.js?version=20170726"></script><script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script><script type="text/javascript" src="https://youtubebyclick-xvbumqfixmhzxo.stackpathdns.com/js/jquery.lazyload.min.js"></script><meta property="og:locale" content="en"><script type="application/javascript">
+  (function(b, o, n, g, s, r, c) { if (b[s]) return; b[s] = {}; b[s].scriptToken = "XzE4NTIyMzEzOTU"; r = o.createElement(n); c = o.getElementsByTagName(n)[0]; r.async = 1; r.src = g; r.id = s + n; c.parentNode.insertBefore(r, c); })(window, document, "script", "//cdn.oribi.io/XzE4NTIyMzEzOTU/oribi.js", "ORIBI");
+</script>		<meta name="robots" content="noindex">
 		
 		<title>Privacy Policy - YouTube by click</title>
 	</head>
@@ -19,16 +21,11 @@
 			</a>
 		</div>
 		<div id="FotterItems">
-			<div id="FAQ" class="FotterItem">
+					<div id="FAQ" class="FotterItem">
 				<div class="itemTriangle"></div>
 				<a href="FAQ.php">FAQ</a>     
 			</div>
-			<div class="SeperatorImg"></div>
-			<div id="Donate" class="FotterItem">
-				<div class="itemTriangle"></div>
-				<a href="PremiumVersion.php">Premium</a>     
-			</div>
-			<div class="SeperatorImg"></div>
+						<div class="SeperatorImg"></div>
 			<div id="Toolbar" class="FotterItem">
 				<div class="itemTriangle"></div>
 
@@ -36,12 +33,12 @@
 
 					Download now				</a>
 			</div>
-			<div id="HeaderRightSide">
+						<div id="HeaderRightSide">
 									<dl id="sample" class="dropdown FotterItem">
 						<dt><a href="#"><div id="CountryFlag" class="flagItem www"></div><span>English</span></a></dt>
 						<dd>
 							<ul>
-							<li><a onclick="langConboChange('www');" href="http://www.youtubebyclick.com/PrivacyPolicy.php"><div class="flagItem www"></div>English</a></li><li><a onclick="langConboChange('es');" href="http://www.youtubebyclick.com/es/PrivacyPolicy.php"><div class="flagItem es"></div>Español</a></li><li><a onclick="langConboChange('fr');" href="http://www.youtubebyclick.com/fr/PrivacyPolicy.php"><div class="flagItem fr"></div>Français</a></li><li><a onclick="langConboChange('pt');" href="http://www.youtubebyclick.com/pt/PrivacyPolicy.php"><div class="flagItem pt"></div>Português</a></li>							</ul>
+							<li><a onclick="langConboChange('www');" href="https://www.youtubebyclick.com/PrivacyPolicy.php"><div class="flagItem www"></div>English</a></li><li><a onclick="langConboChange('es');" href="https://www.youtubebyclick.com/es/PrivacyPolicy.php"><div class="flagItem es"></div>Español</a></li><li><a onclick="langConboChange('fr');" href="https://www.youtubebyclick.com/fr/PrivacyPolicy.php"><div class="flagItem fr"></div>Français</a></li><li><a onclick="langConboChange('pt');" href="https://www.youtubebyclick.com/pt/PrivacyPolicy.php"><div class="flagItem pt"></div>Português</a></li>							</ul>
 						</dd>
 					</dl>
 							</div>
@@ -53,7 +50,7 @@
     function langConboChange(value)
     {
         document.cookie = 'ytbclanapp=' + value + '; expires=Thu, 2 Aug 2022 20:47:11 UTC; path=/';
-		ga('send', 'event', 'lang_change', 'www' + ' to ' + value, 'http://www.youtubebyclick.com/PrivacyPolicy.php');
+		ga('send', 'event', 'lang_change', 'www' + ' to ' + value, 'https://www.youtubebyclick.com/PrivacyPolicy.php');
     }
 
 </script>
@@ -163,6 +160,12 @@
 							<a href="Affiliates.php">Affiliates</a>
 					</li>
 					<li>
+							<a href="Reviews.php">Reviews</a>
+					</li>
+					<li>
+							<a href="PremiumVersion.php">Premium</a> 
+					</li>
+					<li>
 											</li>
 				</ul>
 			</div>
@@ -213,7 +216,7 @@
 			</div>
 			<div id="FotterRightSide">
 				<a href="https://www.facebook.com/pages/Youtube-By-Click/271408139550804?ref=hl" target="_blank">
-					<img data-original="imgs/facebookcommunity.jpg" class="lazy">
+					<img data-original="https://youtubebyclick-xvbumqfixmhzxo.stackpathdns.com/imgs/facebookcommunity.jpg" class="lazy">
 				</a>
 			</div>
 		</div>
