--- a/p/pu/pub/publicrecords360.com.html
+++ b/p/pu/pub/publicrecords360.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the publicrecords360.com privacy policy that was archived on 2017-06-06.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170606012008id_/http%3A//www.publicrecords360.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the publicrecords360.com privacy policy that was archived on 2017-08-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170825093254id_/http%3A//www.publicrecords360.com/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml"><head>
 <title>Privacy Policy for PublicRecords360.com</title>
@@ -7,7 +7,7 @@
 <meta content="privacy, background check, public records, public records search, search public records, free public records" name="keywords">
 <meta content="noindex" name="robots">
 <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-<link href="//p_pr360.commondatastorage.googleapis.com/css/343fea6ef9e218674234cffac08668c4.css" type="text/css" rel="stylesheet">
+<link href="//p_pr360.commondatastorage.googleapis.com/css/eb346417a470c8ee369698b180114120.css" type="text/css" rel="stylesheet">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="format-detection" content="telephone=no">
 <link rel="canonical" href="http://www.publicrecords360.com/privacy.html"><link rel="alternate" type="application/rss+xml" title="Public Records Discussion Feed" href="http://pr360.disqus.com/latest.rss">
@@ -25,18 +25,13 @@
 <div style="visibility:hidden;display:none;" id="likebox" class="like">
 <div id="fblike" class="like_facebook">
 </div>
-<div id="tweet" class="like_tweet">
-</div>
-<div id="pint" class="like_pint" data="?url=http://www.publicrecords360.com/&amp;media=http://www.publicrecords360.com/images/logo.png&amp;description=Search for public records on anyone including criminal records. Find people, phone numbers, addresses, and more. Access free public record resources!"> 
-</div>
 <div id="gplusone" class="like_google">
 </div>
 </div>
 </div>
 <div class="middle">
 <div class="name">
-<p>Search Public Records</p>
-</div>
+<p>Search Public Records</p></div>
 <div class="search">
 <form action="" method="get" onsubmit="javascript:return PeopleSearch(this);">
 <div class="for_input">
@@ -190,7 +185,7 @@ share it.</p>
 </div>
 <div class="bot">
 <div class="sub_bot">
-<p>© copyright 2012 PublicRecords360.com</p>
+<p>© copyright 2012 - 2017 PublicRecords360.com</p>
 <ul class="links">
 <li><a href="/" title="Search Public Records">Home</a></li>
 <li><span></span></li>
