--- a/t/ta/tal/talking-list.com.html
+++ b/t/ta/tal/talking-list.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the talking-list.com privacy policy that was archived on 2017-06-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170625091612id_/http%3A//talking-list.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the talking-list.com privacy policy that was archived on 2017-08-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170825122151id_/http%3A//talking-list.com/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <meta name="verify-v1" content="/lv0zJNfMkt7p/OJeClK+nVJljB2yJjrtTrY4eqdg7c=">
@@ -59,7 +59,7 @@ color:#000000;cursor:pointer;cursor:hand;font-family: Verdana, Arial;font-size: 
 
 	<center>
 		<font size="2" face="verdana" color="#FFFFFF">Recommended<br>Systems</font></center><br>
-	<center><a href="navclick.php?id=57" target="_blank" onmouseover="window.status='Click To Visit Our Sponsor';return true" onmouseout="window.status='';return true"><img src="http://myinstantlist.com/images/125X125.gif" border="0"></a></center><br><center><a href="navclick.php?id=58" target="_blank" onmouseover="window.status='Click To Visit Our Sponsor';return true" onmouseout="window.status='';return true"><img src="http://theateamadexchange.com/images/125-125.jpg" border="0"></a></center><br>	<center>
+	<center><a href="navclick.php?id=46" target="_blank" onmouseover="window.status='Click To Visit Our Sponsor';return true" onmouseout="window.status='';return true"><img src="http://micropowerlist.com/images/banner125x125.jpg" border="0"></a></center><br><center><a href="navclick.php?id=53" target="_blank" onmouseover="window.status='Click To Visit Our Sponsor';return true" onmouseout="window.status='';return true"><img src="http://mysupertrafficsite.com/images/ban/msts-125x125-1.gif" border="0"></a></center><br>	<center>
 	        <p align="center">
 	        <img border="0" src="http://listandchat.com/jv/plus-banner.gif" width="125" height="125">
 
@@ -82,7 +82,7 @@ color:#000000;cursor:pointer;cursor:hand;font-family: Verdana, Arial;font-size: 
 	<center>
 
 
-            <a href="http://talking-list.com/bannerclick.php?id=1548" target="_blank"><img src="http://enhancedwebtraffic.com/images/ewt468x60.jpg" border="0"></a>
+            <a href="http://talking-list.com/bannerclick.php?id=1560" target="_blank"><img src="http://2012-ads.com/images/2012_468x60b.gif" border="0"></a>
 
 
 
