--- a/2/2i/2in/2instructions.com.html
+++ b/2/2i/2in/2instructions.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the 2instructions.com privacy policy that was archived on 2017-06-27.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170627134919id_/http%3A//2instructions.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the 2instructions.com privacy policy that was archived on 2017-08-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170825135102id_/http%3A//www.2instructions.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><!-- InstanceBegin template="/Templates/zemodel.dwt" codeOutsideHTMLIsLocked="false" --><head>
 <!-- InstanceBeginEditable name="entete" -->
