--- a/h/ha/hap/haptik.co.html
+++ b/h/ha/hap/haptik.co.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the haptik.co privacy policy that was archived on 2017-06-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170625101430id_/http%3A//haptik.ai/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the haptik.co privacy policy that was archived on 2017-08-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170826231410id_/http%3A//www.haptik.ai/privacy-policy) for the most accurate reproduction.-->
 
 <html lang="en"><head>
     <meta charset="utf-8">
@@ -51,10 +51,10 @@
                 </div>
                 <div class="collapse navbar-collapse" id="top_menu">
                     <ul>
-                        <li><a href="#" data-toggle="modal" data-target="#bs-example-modal" onclick="_gaq.push(['_trackEvent', 'New Home', 'Get the App'])">GET THE APP</a></li>
-                        <li><a href="partners">PARTNER WITH US</a></li>
-                        <li><a href="http://haptik.ai/blog/" target="_block">BLOG</a></li>
-                        <li><a href="careers">CAREERS</a></li>
+                        <li><a href="#" data-toggle="modal" data-target="#bs-example-modal" onclick="_gaq.push(['_trackEvent', 'New Home', 'Get the App'])">Get The App</a></li>
+                        <li><a href="careers">Careers</a></li>
+                        <li><a href="http://haptik.ai/blog/" target="_block">Blog</a></li>
+                        <li><a href="partners">Partner With Us</a></li>
                     </ul>
                     <div class="clearfix"></div>
                 </div>
@@ -68,16 +68,17 @@
         <div class="modal-content">
             <div class="app-modal">
                 <header>
+                    <img src="images/logo-blue.png" style="float: left">
                     <h1>Get Haptik</h1>
-                    <h4>We Get It Done</h4></header>
+                    </header>
                 <div class="modal-apps">
                     <div class="modal-app"><img src="images/android-store.png" style="width: 200px; height: 300px">
-                        <p class="text-primary bold lato">Download for Android</p>
-                        <a href="http://get.haptik.ai/getapp" target="_blank"><img src="https://haptikimg.s3.amazonaws.com/img/site_v2/play-store.png" class="stores"></a>
+                        <p class="text-primary bold lato"><a href="http://get.haptik.co/AndroidGetHaptik">Download for Android</a></p>
+                        <a href="http://get.haptik.co/AndroidGetHaptik" target="_blank"><img src="images/android.svg" class="stores" height="54" width="152"></a>
                     </div>
                     <div class="modal-app"><img src="images/ios-store.png" style="width: 200px; height: 300px">
-                        <p class="text-primary bold lato">Download for iPhones</p>
-                        <a href="http://get.haptik.ai/getapp" target="_blank"><img src="https://haptikimg.s3.amazonaws.com/img/site_v2/app-store.png" class="stores"></a>
+                        <p class="text-primary bold lato"><a href="http://get.haptik.co/iOSGetHaptik">Download for iPhones</a></p>
+                        <a href="http://get.haptik.co/iOSGetHaptik" target="_blank"><img src="https://haptikimg.s3.amazonaws.com/img/site_v2/app-store.png" class="stores"></a>
                     </div>
                 </div>
             </div>
@@ -169,7 +170,19 @@
 
             <p>9.1 When you use Haptik's Applications, we make good faith efforts to provide you, as and when requested by you, with access to your personal information and shall further ensure that any Personal Information or sensitive personal data or information found to be inaccurate or deficient shall be corrected or amended as feasible, subject to any requirement for such personal information or sensitive personal data or information to be retained by law or for legitimate business purposes. We ask individual users to identify themselves and the information requested to be accessed, corrected or removed before processing such requests, and we may decline to process requests that are unreasonably repetitive or systematic, require disproportionate technical effort, jeopardize the privacy of others, or would be extremely impractical (for instance, requests concerning information residing on backup tapes), or for which access is not otherwise required. In any case where we provide information access and correction, we perform this service free of charge, except if doing so would require a disproportionate effort. Because of the way we maintain certain services, after you delete your information, residual copies may take a period of time before they are deleted from our active servers and may remain in our backup systems.
             </p>
-
+            <p></p>
+                9.2 We may disclose to third party services certain personally identifiable information listed below:<br>
+                <ul>
+                <li>Information you provide us such as name, email, mobile phone number</li>
+                <li>Information we collect as you access and use our service, including contacts in your device, application packages present on your device, email a
+                </li></ul>
+                This information is shared with third party service providers so that we can:<br>
+                <ul>
+                <li>Personalize the app for you</li>
+                <li>Perform behavioral analytics</li>
+                <li>Provide advertisements about goods and services of interest to you</li>
+                </ul>
+            <p></p>
             <h3> J. INFORMATION SECURITY </h3>
 
             <p>10.1 We take appropriate security measures to protect against unauthorized access to or unauthorized alteration, disclosure or destruction of data. These include internal reviews of our data collection, storage and processing practices and security measures, including appropriate encryption and physical security measures to guard against unauthorized access to systems where we store personal data.             
@@ -217,17 +230,16 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-1"></div>
-            <div class="col-sm-5">
+            <div class="col-sm-3">
                 <h2>Haptik</h2>
                 <ul>
                     <li><a href="about-us">About Us </a></li>
                     <li><a href="careers">Careers </a></li>
                     <li><a href="news-media">News &amp; Media </a></li>
                     <li><a href="contact-us">Contact Us </a></li>
-                    <li><a href="partners">Partner With Us </a></li>
                 </ul>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-3">
                 <h2>Blogs</h2>
                 <ul>
                     <li><a href="http://haptik.co/blog/" target="_blank">Company </a>
@@ -237,10 +249,18 @@
                     <li><a href="https://medium.com/haptik-inc" target="_blank">Medium </a></li>
                 </ul>
             </div>
-            <div class="col-sm-2 top-margin20">
-                <img src="images/footer-logo.png">
+            <div class="col-sm-3">
+                <div style="margin-top: 31px ">
+                    <a href="/partners.html" style="background-color: transparent;border: 2px solid white;border-radius: 5px;padding-left: 15px;padding-right: 15px;padding-top: 10px;padding-bottom: 10px;color: white"><b>Partner With Us</b></a>        
+                </div>
             </div>
+            <div class="col-sm-2 top-margin20">
+                <div><img src="images/footer-logo.png"></div>
+                <div><img src="images/TOI.svg" style="margin-top: 10px"></div>
+            </div>
+            
         </div>
+     
         <div class="row footer-top-padd">
             <div class="col-sm-1"></div>
             <div class="col-sm-5">
