examcompass.com (archived on 2017-08-27)
{
  "alexa_rank": 143728,
  "analysis_subcorpus": true,
  "categories": "business;education;informationtech",
  "char_count": 12725,
  "classifier_probability": 0.88,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.62,
  "homepage_snapshot_redirected_domain": "examcompass.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170923124604id_/http://www.examcompass.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170923124604id_/http%3A//examcompass.com",
  "interval": "2017_B",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "examcompass.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170827203306id_/http%3A//www.examcompass.com/privacy-policy",
  "policy_title": "Privacy Policy",
  "policy_url": "examcompass.com/privacy-policy",
  "sha1": "761f7486944c88534861bf704bfca324329b6c31",
  "simhash": 547008734723090644,
  "simhash_updated": false,
  "site_hostname": "examcompass.com",
  "site_url": "http://examcompass.com",
  "smog": 15.51,
  "strict_updated": false,
  "timestamp": "20170827203306",
  "word_count": 2100,
  "year": 2017
}

--- a/e/ex/exa/examcompass.com.html
+++ b/e/ex/exa/examcompass.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the examcompass.com privacy policy that was archived on 2017-06-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170626192306id_/http%3A//www.examcompass.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the examcompass.com privacy policy that was archived on 2017-08-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170827203306id_/http%3A//www.examcompass.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en-gb" prefix="og: http://ogp.me/ns#"><head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -25,20 +25,25 @@
 <link href="http://www.examcompass.com/templates/meet_gavern/css/font-awesome.css" rel="stylesheet" type="text/css">
 <link href="http://www.examcompass.com/templates/meet_gavern/css/override.css" rel="stylesheet" type="text/css">
 <link href="/modules/mod_jbcookies/assets/css/jbcookies.css" rel="stylesheet" type="text/css">
-<link href="/media/system/css/modal.css?61baa65d6d1236ab529175bd07f26bb9" rel="stylesheet" type="text/css">
-<style type="text/css">.gkcol{width:200px;}.container-fluid{max-width:1105px!important;}.gk-main-menu ul ul{width:250px;}.gk-main-menu ul ul ul{margin-left:225px;}</style>
-<script src="/media/jui/js/jquery.min.js?61baa65d6d1236ab529175bd07f26bb9" type="text/javascript"></script>
-<script src="/media/jui/js/jquery-noconflict.js?61baa65d6d1236ab529175bd07f26bb9" type="text/javascript"></script>
-<script src="/media/jui/js/jquery-migrate.min.js?61baa65d6d1236ab529175bd07f26bb9" type="text/javascript"></script>
-<script src="/media/system/js/caption.js?61baa65d6d1236ab529175bd07f26bb9" type="text/javascript"></script>
-<script src="/media/jui/js/bootstrap.min.js?61baa65d6d1236ab529175bd07f26bb9" type="text/javascript"></script>
+<link href="/media/system/css/modal.css?e9ec006b019ea835e495360de8a27e92" rel="stylesheet" type="text/css">
+<style type="text/css">
+.gkcol { width: 200px; }
+.container-fluid { max-width: 1105px!important; }
+.gk-main-menu ul ul { width: 250px; } .gk-main-menu ul ul ul { margin-left: 225px; }
+	</style>
+<script type="application/json" class="joomla-script-options new">{"system.paths":{"root":"","base":""}}</script>
+<script src="/media/jui/js/jquery.min.js?e9ec006b019ea835e495360de8a27e92" type="text/javascript"></script>
+<script src="/media/jui/js/jquery-noconflict.js?e9ec006b019ea835e495360de8a27e92" type="text/javascript"></script>
+<script src="/media/jui/js/jquery-migrate.min.js?e9ec006b019ea835e495360de8a27e92" type="text/javascript"></script>
+<script src="/media/system/js/caption.js?e9ec006b019ea835e495360de8a27e92" type="text/javascript"></script>
+<script src="/media/jui/js/bootstrap.min.js?e9ec006b019ea835e495360de8a27e92" type="text/javascript"></script>
 <script src="http://www.examcompass.com/templates/meet_gavern/js/bootstrap.js" type="text/javascript"></script>
 <script src="http://www.examcompass.com/templates/meet_gavern/js/page.js" type="text/javascript"></script>
 <script src="http://www.examcompass.com/templates/meet_gavern/js/gk.menu.js" type="text/javascript"></script>
-<script src="/media/system/js/mootools-core.js?61baa65d6d1236ab529175bd07f26bb9" type="text/javascript"></script>
-<script src="/media/system/js/core.js?61baa65d6d1236ab529175bd07f26bb9" type="text/javascript"></script>
-<script src="/media/system/js/mootools-more.js?61baa65d6d1236ab529175bd07f26bb9" type="text/javascript"></script>
-<script src="/media/system/js/modal.js?61baa65d6d1236ab529175bd07f26bb9" type="text/javascript"></script>
+<script src="/media/system/js/mootools-core.js?e9ec006b019ea835e495360de8a27e92" type="text/javascript"></script>
+<script src="/media/system/js/core.js?e9ec006b019ea835e495360de8a27e92" type="text/javascript"></script>
+<script src="/media/system/js/mootools-more.js?e9ec006b019ea835e495360de8a27e92" type="text/javascript"></script>
+<script src="/media/system/js/modal.js?e9ec006b019ea835e495360de8a27e92" type="text/javascript"></script>
 <script type="text/javascript">
 jQuery(window).on('load',  function() {
 				new JCaption('img.caption');
@@ -167,16 +172,16 @@ Main menu </a>
 <li class="item-138"><a href="/site-map">Site Map</a></li><li class="item-139 current active"><a href="/privacy-policy">Privacy Policy</a></li><li class="item-140"><a href="/terms-and-conditions">Terms &amp; Conditions</a></li></ul>
 </div></div></div>
 <p class="pull-right gk-toplink"><a href="http://examcompass.com/privacy-policy#top" id="back-top">Back to top</a></p>
- 
+
 </footer>
 <script type="text/javascript">
 		jQuery('*[rel=tooltip]').tooltip();
 		jQuery('*[rel=popover]').popover();
 		jQuery('.tip-bottom').tooltip({placement: "bottom"});
 	</script>
- 
- 
- 
+
+
+
 <script type="text/javascript">var _gaq = _gaq || []; _gaq.push(['_setAccount', 'UA-34930828-3']); _gaq.push(['_trackPageview']);(function() { var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s); })();</script>
 <div class="custom">
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
@@ -190,7 +195,7 @@ Main menu </a>
 }(document, 'script', 'facebook-jssdk'));</script>
 <script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5157228161be17ee"></script>
- 
+
 <script type="text/javascript">
 var sc_project=9659664; 
 var sc_invisible=1; 
@@ -202,25 +207,28 @@ scJsHost+
 "statcounter.com/counter/counter.js'></"+"script>");
 </script><script type="text/javascript" src="https://secure.statcounter.com/counter/counter.js"></script>
 <noscript><div class="statcounter"><a title="joomla
-statistics" href="http://statcounter.com/joomla/" target="_blank"><img class="statcounter" src="http://c.statcounter.com/9659664/0/3f017820/1/" height="1" width="1" alt="joomla statistics"></a></div></noscript>
- </div>
+statistics" href="http://statcounter.com/joomla/"
+target="_blank"><img class="statcounter"
+src="http://c.statcounter.com/9659664/0/3f017820/1/" height="1" width="1"
+alt="joomla statistics"></a></div></noscript>
+</div>
 <!--googleoff: all-->
- 
+
 <div class="jb cookie bottom black blue ">
- 
+
 <div class="jb cookie-bg black"></div>
 <h2>In order to provide you with the best online experience this website uses cookies.</h2>
-<p>By using our website, you agree to our use of cookies.  
+<p>By using our website, you agree to our use of cookies. 
 <a href="#jbcookies" data-toggle="modal">Learn more</a>
 </p>
 <div class="btn btn-primary jb accept blue">I agree</div>
 </div>
- 
+
 <div id="jbcookies" class="modal hide fade">
 <div class="modal-header">
 <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
 <br>
- 
+
 </div>
 <div class="modal-body">
 <h1>Privacy Policy</h1>
