--- a/t/te/tem/tempted.com.html
+++ b/t/te/tem/tempted.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the tempted.com privacy policy that was archived on 2016-05-23.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160523075134id_/https%3A//www.tempted.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the tempted.com privacy policy that was archived on 2017-08-27.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170827230139id_/https%3A//www.tempted.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -47,7 +47,7 @@
 								</p>
 								
 								<p><strong class="accent">"OPT-OUT" - REVOCATION OF CONSENT PROCEDURE</strong></p>
-								<p class="small">The Site also offers all Members and Users a procedure for 'Opting-Out' if the Member or User subsequently chooses to revoke or withdraw any consent to receive Offers by sending an e-mail from the email address you wish to opt out to "cs@temptedsupport.com" clearly stating the email address in the body of the email and that the Member or User has revoked or withdrawn consent to receive any future Offers from Site to such email address.</p>
+								<p class="small">The Site also offers all Members and Users a procedure for 'Opting-Out' if the Member or User subsequently chooses to revoke or withdraw any consent to receive Offers by sending an e-mail from the email address you wish to opt out to "cs@tempted.com" clearly stating the email address in the body of the email and that the Member or User has revoked or withdrawn consent to receive any future Offers from Site to such email address.</p>
 								
 								<p><strong class="accent">DISCLOSURE</strong></p>
 								<p class="small">Tempted will not disclose or use any of your personally identifiable information except to the extent set forth in this Privacy Policy, or if acquired to the acquiring entity and its related companies or under special circumstances, such as when we believe in good faith that the law requires it, or when we have reason to believe that disclosing this information is necessary to enforce any of our rights and terms and conditions or to identify, contact or bring legal action against someone who may be violating the Tempted Terms and Conditions or to comply with applicable law or valid subpoenas or document productions in litigation.</p>
