mormon.org (archived on 2017-08-29)
{
  "alexa_rank": 93689,
  "analysis_subcorpus": true,
  "categories": "education;religion",
  "char_count": 15567,
  "classifier_probability": 0.99,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.47,
  "homepage_snapshot_redirected_domain": "mormon.org",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20171001072952id_/https://www.mormon.org/",
  "homepage_snapshot_url": "https://web.archive.org/web/20171001072952id_/http%3A//mormon.org",
  "interval": "2017_B",
  "link_text": "Privacy Policy (Updated 03/18/2014)",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "mormon.org",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170829171500id_/https%3A//www.mormon.org/privacy-policy",
  "policy_title": "Privacy Policy | Mormon.org",
  "policy_url": "mormon.org/privacy-policy",
  "sha1": "aa401d93e3d93e5edf86e44c255474e4230fec89",
  "simhash": 1804028700182454628,
  "simhash_updated": false,
  "site_hostname": "mormon.org",
  "site_url": "http://mormon.org",
  "smog": 16.53,
  "strict_updated": true,
  "timestamp": "20170829171500",
  "word_count": 2467,
  "year": 2017
}

--- a/m/mo/mor/mormon.org.html
+++ b/m/mo/mor/mormon.org.html
@@ -1,7 +1,7 @@
-<!--The following is the downloaded HTML source of the mormon.org privacy policy that was archived on 2017-06-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170610031627id_/https%3A//mormon.org/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mormon.org privacy policy that was archived on 2017-08-29.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170829171500id_/https%3A//www.mormon.org/privacy-policy) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml"><head>
+<!DOCTYPE html><html data-cache="1hr" xmlns="http://www.w3.org/1999/xhtml"><head>
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <title>Privacy Policy | Mormon.org</title>
@@ -31,36 +31,18 @@
     <meta name="siteCountryCode" content="us">
     <meta name="languageName" content="English">
     <meta name="dtmVersion" content="2.3">
-    <link rel="stylesheet" href="/bc/assets/build/v05182017/css/alma/eng/site.css">
+    <link rel="stylesheet" href="/bc/assets/build/v08282017/css/alma/eng/site.css">
     <link rel="shortcut icon" href="//www.mormon.org/favicon.ico">
     <link rel="canonical" href="/privacy-policy">
-    <script src="https://edge.ldscdn.org/cdn2/csp/ldsorg/scripts/tracking.js" type="text/javascript" async=""></script><script async="" src="https://www.googletagmanager.com/gtm.js?id=GTM-WM4SZK"></script><script async="" src="//connect.facebook.net/en_US/fbds.js"></script><script type="text/javascript">var DDO = {};</script>
-    <script src="/bc/assets/build/v05182017/js/dtm-ddo.min.js">;</script>
+    <link rel="preconnect" href="//fonts.googleapis.com">
+    <link rel="preconnect" href="//ajax.googleapis.com">
+    <link rel="preconnect" href="//fonts.gstatic.com">
+    <link rel="preload" href="https://fonts.gstatic.com/s/opensans/v13/cJZKeOuBrn4kERxqtaUH3ZBw1xU1rKptJj_0jans920.woff2" as="font" type="font/woff2">
+    <link rel="preload" href="https://fonts.gstatic.com/s/opensans/v13/MTP_ySUJH_bn48VBG8sNShampu5_7CjHW5spxoeN3Vs.woff2" as="font" type="font/woff2">
+    <script src="https://edge.ldscdn.org/cdn2/csp/ldsorg/scripts/tracking.js" type="text/javascript" async=""></script><script type="text/javascript">var DDO = {};</script>
+    <script src="/bc/assets/build/v08282017/js/dtm-ddo.min.js">;</script>
     <script src="//assets.adobedtm.com/05c94072b1046aef0dc9b195809b4d2429a0d30a/satelliteLib-fd19b60861d959eed1072a3850950fe118e70496.js"></script>
     <script type="text/javascript">var _sf_startpt=(new Date()).getTime();</script>
-    <script>(function() { var _fbq = window._fbq || (window._fbq = []); if (!_fbq.loaded) {
-                var fbds = document.createElement('script'); fbds.async = true; fbds.src =
-                '//connect.facebook.net/en_US/fbds.js'; var s =
-                document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(fbds, s);
-                _fbq.loaded = true; } _fbq.push(['addPixelId', '423205191193611']); })();
-                window._fbq = window._fbq || []; window._fbq.push(['track', 'PixelInitialized',
-                {}]);</script>
-    <noscript>
-      <img height="1" width="1" alt="" style="display:none" src="https://www.facebook.com/tr?id=423205191193611&amp;ev=PixelInitialized"/>
-    </noscript>
-    <script>
-  // Create a dataLayer object for GTM to use.
-  var dataLayer = [JSON.parse(JSON.stringify(DDO))];
-  </script>
-    <!-- Google Tag Manager -->
-    <script>
-    (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-    j=d.createElement(s),dl=l!='dataLayer'?'&amp;l='+l:'';j.async=true;j.src=
-    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-    })(window,document,'script','dataLayer', 'GTM-WM4SZK');
-  </script>
-    <!-- End Google Tag Manager -->
     <!-- Tealium -->
     <script>
     var utag_data = {};(function(a,b,c,d) { a="https://edge.ldscdn.org/cdn2/csp/ldsorg/scripts/tracking.js"; b=document;c='script';d=b.createElement(c);d.src=a;d.type='text/java'+c;d.async=true; a=b.getElementsByTagName(c)[0];a.parentNode.insertBefore(d,a); })();
@@ -72,31 +54,17 @@
   <script>MO_IS_OLD_IE = true;</script>
   <![endif]-->
   </head>
-  <body class="page page--"><!-- Google Code for Remarketing Tag --> <!--for some reason in prod the precompiler is adding a &#13; to the code thats in the cdata.--> <!--If its all on one line it doesnt do this. Hence the reason for it being all on one line --><script type="text/javascript" xml:space="preserve">
-      /*  */      var google_conversion_id = 983304315;      var google_custom_params = window.google_tag_params;      var google_remarketing_only = true;      /*  */
-   </script>
-<div style="display:none">
-<script type="text/javascript" src="//www.googleadservices.com/pagead/conversion.js" xml:space="preserve">
-      </script>
-</div>
-<noscript>
-      <div style="display:inline;">
-<img height="1" width="1" style="border-style:none;" alt="" src="//googleads.g.doubleclick.net/pagead/viewthroughconversion/983304315/?value=0&amp;guid=ON&amp;script=0"/>
-</div>
-    </noscript>
- <!-- Google Tag Manager (noscript) --><noscript>
-      <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WM4SZK" height="0" width="0" style="display:none;visibility:hidden" frameborder="1" scrolling="auto"></iframe>
-    </noscript><!-- End Google Tag Manager (noscript) --><div class="page__background-reset page__background-reset--has-bottom-spacing">
+  <body class="page page--">
+<div class="page__background-reset page__background-reset--has-bottom-spacing">
 <div class="curbed">
-<header class="page__header">
-<div class="site-header site-header--has-spacing">
+<header class="page-header page-header--has-spacing ">
 <div class="site-menu__toggle">
 <span class="icon icon--menu">
       </span>
 </div>
-<a href="/" class="site-header__brand">
-<span class="site-header__logo localized localized--logo"></span>
-<span class="site-header__name">mormon.org</span>
+<a href="/" class="page-header__brand">
+<span class="page-header__logo localized localized--logo"></span>
+<span class="page-header__name">mormon.org</span>
 </a>
 <div class="hidden">Main Menu</div>
 <div class="site-menu-wrapper site-menu-wrapper--">
@@ -117,28 +85,28 @@
 </div>
 <div class="bleed">
 <ul class="site-menu__subgroup" data-collapse="Beliefs">
-		      <li class="site-menu__subitem site-menu__subitem--">
+		    <li class="site-menu__subitem site-menu__subitem--">
 <a class="site-menu__link site-menu__link-- link" href="/beliefs/god">God</a>
 </li>
-		      <li class="site-menu__subitem site-menu__subitem--">
+		    <li class="site-menu__subitem site-menu__subitem--">
 <a class="site-menu__link site-menu__link-- link" href="/beliefs/jesus-christ">Jesus Christ</a>
 </li>
-		      <li class="site-menu__subitem site-menu__subitem--">
+		    <li class="site-menu__subitem site-menu__subitem--">
 <a class="site-menu__link site-menu__link-- link" href="/beliefs/book-of-mormon">Book of Mormon</a>
 </li>
-		      <li class="site-menu__subitem site-menu__subitem--">
+		    <li class="site-menu__subitem site-menu__subitem--">
 <a class="site-menu__link site-menu__link-- link" href="/beliefs/the-bible">Bible</a>
 </li>
-		      <li class="site-menu__subitem site-menu__subitem--">
+		    <li class="site-menu__subitem site-menu__subitem--">
 <a class="site-menu__link site-menu__link-- link" href="/beliefs/the-family">Family</a>
 </li>
-		      <li class="site-menu__subitem site-menu__subitem--">
+		    <li class="site-menu__subitem site-menu__subitem--">
 <a class="site-menu__link site-menu__link-- link" href="/beliefs/purpose-of-life">Purpose of Life</a>
 </li>
-		      <li class="site-menu__subitem site-menu__subitem--">
+		    <li class="site-menu__subitem site-menu__subitem--">
 <a class="site-menu__link site-menu__link-- link" href="/beliefs">Additional Topics</a>
 </li>
-		    </ul>
+		  </ul>
 </div>
 </div>
 
@@ -149,28 +117,28 @@
 </div>
 <div class="bleed">
 <ul class="site-menu__subgroup" data-collapse="FAQs">
-		      <li class="site-menu__subitem site-menu__subitem--">
+		    <li class="site-menu__subitem site-menu__subitem--">
 <a class="site-menu__link site-menu__link-- link" href="/beliefs/god">Who is God?</a>
 </li>
-		      <li class="site-menu__subitem site-menu__subitem--">
+		    <li class="site-menu__subitem site-menu__subitem--">
 <a class="site-menu__link site-menu__link-- link" href="/beliefs/jesus-christ">Who is Jesus Christ?</a>
 </li>
-		      <li class="site-menu__subitem site-menu__subitem--">
-<a class="site-menu__link site-menu__link-- link" href="/beliefs/following-god">How can I change my life?</a>
+		    <li class="site-menu__subitem site-menu__subitem--">
+<a class="site-menu__link site-menu__link-- link" href="/beliefs/following-god">How Can I Change My Life?</a>
 </li>
-		      <li class="site-menu__subitem site-menu__subitem--">
-<a class="site-menu__link site-menu__link-- link" href="/beliefs/prayer">How do I pray?</a>
+		    <li class="site-menu__subitem site-menu__subitem--">
+<a class="site-menu__link site-menu__link-- link" href="/beliefs/prayer">How Do I Pray?</a>
 </li>
-		      <li class="site-menu__subitem site-menu__subitem--">
-<a class="site-menu__link site-menu__link-- link" href="/beliefs/forgiveness">How do I forgive?</a>
+		    <li class="site-menu__subitem site-menu__subitem--">
+<a class="site-menu__link site-menu__link-- link" href="/beliefs/forgiveness">How Do I Forgive?</a>
 </li>
-		      <li class="site-menu__subitem site-menu__subitem--">
+		    <li class="site-menu__subitem site-menu__subitem--">
 <a class="site-menu__link site-menu__link-- link" href="/beliefs/church-community">What's it like to be a Mormon?</a>
 </li>
-		      <li class="site-menu__subitem site-menu__subitem--">
+		    <li class="site-menu__subitem site-menu__subitem--">
 <a class="site-menu__link site-menu__link-- link" href="/beliefs">View Other Topics</a>
 </li>
-		    </ul>
+		  </ul>
 </div>
 </div>
 
@@ -181,44 +149,43 @@
 </div>
 <div class="bleed">
 <ul class="site-menu__subgroup" data-collapse="Contact">
-		      <li class="site-menu__subitem site-menu__subitem--">
+		    <li class="site-menu__subitem site-menu__subitem--">
 <a class="site-menu__link site-menu__link-- link" href="/chat">Chat with Missionaries</a>
 </li>
-		      <li class="site-menu__subitem site-menu__subitem--">
+		    <li class="site-menu__subitem site-menu__subitem--">
 <a class="site-menu__link site-menu__link-- link" href="/free-book-of-mormon">Free Book of Mormon</a>
 </li>
-		      <li class="site-menu__subitem site-menu__subitem--">
+		    <li class="site-menu__subitem site-menu__subitem--">
 <a class="site-menu__link site-menu__link-- link" href="/free-bible">Free Bible</a>
 </li>
-		      <li class="site-menu__subitem site-menu__subitem--">
+		    <li class="site-menu__subitem site-menu__subitem--">
 <a class="site-menu__link site-menu__link-- link" href="/worship">Worship with Us</a>
 </li>
-		      <li class="site-menu__subitem site-menu__subitem--">
+		    <li class="site-menu__subitem site-menu__subitem--">
 <a class="site-menu__link site-menu__link-- link" href="/missionaries">Meet with Missionaries</a>
 </li>
-		    </ul>
+		  </ul>
 </div>
 </div>
 </div>
 </div>
-<div class="site-header__search">
+<div class="page-header__search">
 <form class="site-search__form" rel="/searchresults" method="get" enctype="application/x-www-form-urlencoded">
-		<span class="site-search__mobile-icon icon icon--search"></span>
-		<span class="site-search__text hidden">SEARCH</span>
-		<div class="site-search__wrapper site-search__wrapper--">
+	      <span class="site-search__mobile-icon icon icon--search"></span>
+	      <span class="site-search__text hidden">SEARCH</span>
+	      <div class="site-search__wrapper site-search__wrapper--">
 <span class="site-search__mobile-close icon icon--close"></span>
 <div class="site-search__input-wrapper">
 <span class="site-search__icon icon icon--search"></span>
 <input class="site-search__input searchbox" type="search" placeholder="SEARCH">
 </div>
 </div>
-	      </form>
+	    </form>
 </div>
-</div>
-  </header>
-<div>
+</header>
+  <div>
    </div>
-<main class="page__main">
+<main>
 <article class="article">
 <header class="article__header">
 <section class="hero"> </section>
@@ -330,7 +297,7 @@
 </div>
 </div>
 <footer class="page__footer">
-<div class="site-footer">
+<div class="page-footer">
 <div class="footer-locale">
 <div class="footer-locale-selectors curbed collapsible-group">
 <div class="footer-locale-selector footer-locale-selector--country collapsible" data-target="country">
@@ -604,7 +571,7 @@
 <div class="footer-locales"></div>
 </div>
 <div class="curbed">
-<div class="site-footer__section">
+<div class="page-footer__section">
 <div class="footer-links">
 <section class="link-list footer-links__group">
 <header class="link-list__header">
@@ -677,12 +644,12 @@
 </div><!-- END TODO --></section>
 </div>
 </div>
-<div class="site-footer__section site-footer__section--has-horizontal-spacing">
-<div class="site-footer__logo site-footer__name">
+<div class="page-footer__section page-footer__section--has-horizontal-spacing">
+<div class="page-footer__logo page-footer__name">
 <span class="localized localized--logo"></span>
 </div>
 </div>
-<div class="site-footer__section site-footer__section--has-horizontal-spacing">
+<div class="page-footer__section page-footer__section--has-horizontal-spacing">
 <p>
 		© 2017 by Intellectual Reserve, Inc. All rights reserved.
 		  
@@ -696,10 +663,7 @@
 <div class="overlay"></div>
 <div class="breakpointer" data-breakpointer=""></div>
 <div class="hidden" id="mdCampaign" data-mdcampaignid=""></div>
-<script src="/bc/assets/build/v05182017/js/alma/polyfills/fetch.js" xml:space="preserve"></script>
-<script src="/bc/assets/build/v05182017/js/alma/polyfills/promise.js" xml:space="preserve"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js" xml:space="preserve"></script>
-<script src="/bc/assets/build/v05182017/js/alma/site.js" xml:space="preserve"></script>  <div></div>
+<script src="/bc/assets/build/v08282017/js/alma/site.js" xml:space="preserve"></script>  <div></div>
 <div id="consent_blackbar"></div>
 <script async="async" src="//consent.truste.com/notice?domain=lds.org&amp;c=teconsent&amp;js=bb&amp;noticeType=bb&amp;text=true&amp;oc=1&amp;fade=30000&amp;language=en" crossorigin="" xml:space="preserve"></script><!-- Adobe DTM --><script type="text/javascript" xml:space="preserve">_satellite.pageBottom();</script><!-- Adobe DTM -->
 </body></html>
