rtbooster.com (archived on 2017-08-30)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 5463,
  "classifier_probability": 0.76,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 11.39,
  "homepage_snapshot_redirected_domain": "rtbooster.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20170929154415id_/http://rtbooster.com/english/",
  "homepage_snapshot_url": "https://web.archive.org/web/20170929154415id_/http%3A//rtbooster.com",
  "interval": "2017_B",
  "link_text": "Privacy",
  "parked_domain": false,
  "phase": "B",
  "policy_domain": "rtbooster.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20170830085217id_/http%3A//rtbooster.com/english/privacy.html",
  "policy_title": "Booster.DCA: Privacy Policy",
  "policy_url": "rtbooster.com/english/privacy.html",
  "sha1": "a351ffce3cf579f168e64b5412c3ff8866d58bd2",
  "simhash": 10289905264773253966,
  "simhash_updated": true,
  "site_hostname": "rtbooster.com",
  "site_url": "http://rtbooster.com",
  "smog": 14.27,
  "strict_updated": true,
  "timestamp": "20170830085217",
  "word_count": 903,
  "year": 2017
}

--- a/r/rt/rtb/rtbooster.com.html
+++ b/r/rt/rtb/rtbooster.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the rtbooster.com privacy policy that was archived on 2017-05-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170517202919id_/http%3A//rtbooster.com/english/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the rtbooster.com privacy policy that was archived on 2017-08-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170830085217id_/http%3A//rtbooster.com/english/privacy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
     <meta charset="utf-8">
@@ -186,8 +186,8 @@ We will also post a notice on our home page that this Privacy Policy has changed
  
 <h4><b>Contact us</b></h4>
 <p><b>Data-Centric Alliance</b><br>
-Address: 119072, Russia, Moscow, 2/1, Bersenevskiy per.<br>
-Phone: +7 499 429 0977. E-mail: <a href="mailto:privacy@rtbooster.com">privacy@rtbooster.com</a></p>
+Address: 119072, Russia, Moscow, 6/3, Bersenevskaya emb.<br>
+Phone: 8 (800) 500 5218. E-mail: <a href="mailto:privacy@rtbooster.com">privacy@rtbooster.com</a></p>
 
 
 </b></b></div><b><b> <!-- PRIVACY INFO END -->
@@ -218,9 +218,9 @@ Phone: +7 499 429 0977. E-mail: <a href="mailto:privacy@rtbooster.com">privacy@r
              <h2 class="wow fadeInDown" data-wow-duration="1s" style="visibility: hidden; animation-duration: 1s; animation-name: none;">Contact Us</h2>
 
              <h4 class="wow fadeInUp" data-wow-duration="2s" style="visibility: hidden; animation-duration: 2s; animation-name: none;"><a href="http://datacentric.ru" target="_blank">Data-Centric Alliance</a></h4>
-             <h5>Phone: +7 499 429 0977.</h5>
-             <h5>Address: 119072, Russia, Moscow, 2/1, Bersenevskiy per.</h5>
-             <h5><a href="https://goo.gl/maps/lvFI2" target="_blank">Find us</a> (<a href="https://goo.gl/maps/lvFI2" target="_blank">Google Maps</a>)</h5>
+             <h5>Phone: 8 (800) 500 5218.</h5>
+             <h5>Address: 119072, Russia, Moscow, 6/3, Bersenevskaya emb.</h5>
+             <h5><a href="https://goo.gl/maps/Lp2eQQTQGq52" target="_blank">Find us</a> (<a href="https://goo.gl/maps/Lp2eQQTQGq52" target="_blank">Google Maps</a>)</h5>
              <h5><a href="javascript:void( window.open('http://form.jotformeu.com/form/43560911668359', 'blank','scrollbars=yes,toolbar=no,width=700,height=550'))">Contact us</a></h5>             
              
 
@@ -232,7 +232,7 @@ Phone: +7 499 429 0977. E-mail: <a href="mailto:privacy@rtbooster.com">privacy@r
          
          <!-- RIGHT PART OF THE ABOUT SECTION -->
          <div class="col-md-6 wow fadeInUp myphoto" data-wow-duration="2s" style="visibility: hidden; animation-duration: 2s; animation-name: none;">
-             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2246.0162865335838!2d37.609923!3d55.740846000000005!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54baa65c888e5%3A0xf56ec2194dae38ec!2sBersenevskiy+per.%2C+2%D1%811%2C+Moskva%2C+119072!5e0!3m2!1sen!2sru!4v1419319263446" width="600" height="250" frameborder="0" style="border:0"></iframe>
+             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2246.0178577272713!2d37.60673631597347!3d55.740818700383606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54baa6948eae3%3A0xe3c29cf1d085abcb!2sBersenevskaya+Haberezhnaya%2C+6%D1%813%2C+Moskva%2C+Russia%2C+119072!5e0!3m2!1sen!2sru!4v1499266537935" width="600" height="250" frameborder="0" style="border:0" allowfullscreen=""></iframe>
 
          </div><!-- RIGHT PART OF THE ABOUT SECTION END -->        
      </div><!-- ABOUT SECTION END -->
