--- a/m/me/meg/megamoneymailz.com.html
+++ b/m/me/meg/megamoneymailz.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the megamoneymailz.com privacy policy that was archived on 2017-01-07.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170107092341id_/http%3A//megamoneymailz.com/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the megamoneymailz.com privacy policy that was archived on 2017-08-30.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170830091205id_/http%3A//megamoneymailz.com/privacy.php) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html xmlns="http://www.w3.org/1999/xhtml"><head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -70,7 +70,7 @@ color:#000000;cursor:pointer;cursor:hand;font-family: Verdana, Arial;font-size: 
 
 </style>
 <center>
-           <a href="http://megamoneymailz.com/bannerclick.php?id=4641" target="_blank"><img src="http://www.mylistgiant.com/imagesrte/D171879/images-LL-Banners/59327.gif" border="0"></a><br>
+           <a href="http://megamoneymailz.com/bannerclick.php?id=5007" target="_blank"><img src="http://www.MagicDolla.com/images/MagicDollaBanner3.gif" border="0"></a><br>
 	</center><p align="center">
 
 
